force-app/main/default/objects/FileExternal__x/FileExternal__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>FileExternal</externalName>
    <label>FileExternal</label>
    <pluralLabel>FileExternal</pluralLabel>
</CustomObject>