force-app/main/default/objects/FileExternal__x/fields/AccountExtId__c.field-meta.xml
<CustomField>
    <fullName>AccountExtId__c</fullName>
    <label>Account</label>
    <length>255</length>
    <referenceTargetField>Account.GUID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FileExternal</relationshipLabel>
    <relationshipName>FileExternal</relationshipName>
    <type>IndirectLookup</type>
</CustomField>