force-app/main/default/objects/FileExternal__x/fields/Link_To_File__c.field-meta.xml
<CustomField>
    <fullName>Link_To_File__c</fullName>
    <label>Link To File</label>
    <type>Url</type>
</CustomField>